Added dateformat and timeformat qualifiers to the xfig_timetics function

--- a/changes.txt
+++ b/changes.txt
@@ -293,3 +293,5 @@ Changes since 0.1.0
 135. Updated the README file
 136. Remove temporary latex-generated .aux, .dvi, and .log file upon
      exit
+137. Added dateformat and timeformat qualifiers to the xfig_timetics
+     function
